# 2019-DAT109-Modelldrevet-utvikling-27

Bookstore/bookstore/: .project  ConversionMap.txt  Model.wr
EXPO Applikasjon/expo_/: .project  ConversionMap.txt  Model.wr
Umple/: Umple.txt
Umple/JavaFromUmple/Java/: Admin.java  AdminBrowseServlet.java  AdminEAO.java  AdminEditStandServlet.java  AdminServlet.java  AdminTasks.java  BrowseServlet.java  ConfirmNewStandServlet.java  ConfirmNewVisitorServlet.java  Expo.java  ExpoEAO.java  GetQRCodeServlet.java  Institute.java  InstituteEAO.java  InstituteResult.java  LoginUtils.java  LogoutServlet.java  MessageBird.java  NewVisitorServlet.java  PasswordUtil.java  QRCodeServlet.java  QRUtils.java  RegistrationClosedServlet.java  RegistrationServlet.java  Result.java  ResultServlet.java  SMSMock.java  SessionUtils.java  Stand.java  StandEAO.java  StandResult.java  StandServlet.java  StartServlet.java  Study.java  StudyEAO.java  StudyResult.java  VerificationServlet.java  VerificationUtils.java  Visitor.java  VisitorEAO.java  (+4 more)
Umple/PhpFromUmple/Php/: Admin.php  AdminBrowseServlet.php  AdminEAO.php  AdminEditStandServlet.php  AdminServlet.php  AdminTasks.php  BrowseServlet.php  ConfirmNewStandServlet.php  ConfirmNewVisitorServlet.php  Expo.php  ExpoEAO.php  GetQRCodeServlet.php  Institute.php  InstituteEAO.php  InstituteResult.php  LoginUtils.php  LogoutServlet.php  MessageBird.php  NewVisitorServlet.php  PasswordUtil.php  QRCodeServlet.php  QRUtils.php  RegistrationClosedServlet.php  RegistrationServlet.php  Result.php  ResultServlet.php  SMSMock.php  SessionUtils.php  Stand.php  StandEAO.php  StandResult.php  StandServlet.php  Study.php  (+11 more)
Umple/RTCppFromUmple/RTCpp/: CMakeLists.txt  model_Main.cpp  model_Model.h
