cmake_minimum_required(VERSION 3.0)
project(model)

set(CMAKE_CXX_STANDARD 11)
include_directories(${CMAKE_SOURCE_DIR})


set(SOURCE_FILES
model_Model.h
model_Main.cpp
ExpoEAO.h
ExpoEAO.cpp
InstituteEAO.h
InstituteEAO.cpp
StandEAO.h
StandEAO.cpp
StudyEAO.h
StudyEAO.cpp
VisitorEAO.h
VisitorEAO.cpp
VoteEAO.h
VoteEAO.cpp
Admin.h
Admin.cpp
Expo.h
Expo.cpp
Institute.h
Institute.cpp
Study.h
Study.cpp
AdminEAO.h
AdminEAO.cpp
Stand.h
Stand.cpp
Visitor.h
Visitor.cpp
Vote.h
Vote.cpp
BrowseServlet.h
BrowseServlet.cpp
ConfirmNewStandServlet.h
ConfirmNewStandServlet.cpp
ConfirmNewVisitorServlet.h
ConfirmNewVisitorServlet.cpp
GetQRCodeServlet.h
GetQRCodeServlet.cpp
NewVisitorServlet.h
NewVisitorServlet.cpp
QRCodeServlet.h
QRCodeServlet.cpp
RegistrationClosedServlet.h
RegistrationClosedServlet.cpp
RegistrationServlet.h
RegistrationServlet.cpp
ResultServlet.h
ResultServlet.cpp
StandServlet.h
StandServlet.cpp
StartServlet.h
StartServlet.cpp
VerificationServlet.h
VerificationServlet.cpp
VoteServlet.h
VoteServlet.cpp
AdminBrowseServlet.h
AdminBrowseServlet.cpp
AdminEditStandServlet.h
AdminEditStandServlet.cpp
AdminServlet.h
AdminServlet.cpp
LogoutServlet.h
LogoutServlet.cpp
MessageBird.h
MessageBird.cpp
SMSMock.h
SMSMock.cpp
InstituteResult.h
InstituteResult.cpp
Result.h
Result.cpp
StandResult.h
StandResult.cpp
StudyResult.h
StudyResult.cpp
AdminTasks.h
AdminTasks.cpp
LoginUtils.h
LoginUtils.cpp
PasswordUtil.h
PasswordUtil.cpp
QRUtils.h
QRUtils.cpp
SessionUtils.h
SessionUtils.cpp
VerificationUtils.h
VerificationUtils.cpp
VoteUtils.h
VoteUtils.cpp)

add_executable(model ${SOURCE_FILES})